<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/profile_image1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile1"
        android:contentDescription="@string/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp" />


    <TextView
        android:id="@+id/friend_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="40dp"
        android:text="@string/karthik"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_image1" />

    <ImageView
        android:id="@+id/profile_image2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile2"
        android:contentDescription="@string/profile_image_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp" />


    <TextView
        android:id="@+id/friend_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="44dp"
        android:text="@string/anirudh"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_image2" />

    <ImageView
        android:id="@+id/profile_image3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile3"
        android:contentDescription="@string/profile_image__"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp" />


    <TextView
        android:id="@+id/friend_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="36dp"
        android:text="@string/shashank"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_image3" />

    <ImageView
        android:id="@+id/profile_image4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/profile_image___"
        android:src="@drawable/profile4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image3" />

    <TextView
        android:id="@+id/friend_name4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alekya"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="353dp" />

    <ImageView
        android:id="@+id/profile_image5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile_image_____"
        android:src="@drawable/profile5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image4"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/friend_name5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="28dp"
        android:text="@string/aadilakshmi"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_image5" />

</androidx.constraintlayout.widget.ConstraintLayout>
